test: fix missing transactional #386